--- a/package.json
+++ b/package.json
@@ -21,8 +21,20 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "angular2-jwt": "^0.2.3",
+    "assert": "^1.4.1",
+    "auth0-lock": "^11.0.1",
+    "bootstrap": "^3.3.7",
+    "bootstrap-sass": "^3.3.7",
     "core-js": "^2.4.1",
+    "http": "0.0.0",
+    "httpdispatcher": "^2.1.1",
+    "jquery": "^3.2.1",
+    "mongodb": "^3.0.1",
+    "nodemon": "^1.14.10",
+    "querystring": "^0.2.0",
     "rxjs": "^5.5.2",
+    "url": "^0.11.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
@@ -31,7 +43,7 @@
     "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.96",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
