--- a/package.json
+++ b/package.json
@@ -27,12 +27,20 @@
     "bootstrap": "^3.3.7",
     "bootstrap-sass": "^3.3.7",
     "core-js": "^2.4.1",
+    "cors": "^2.8.4",
+    "express-jwt": "^5.3.0",
     "http": "0.0.0",
     "httpdispatcher": "^2.1.1",
+    "primeng": "^4.2.2",
     "jquery": "^3.2.1",
+    "jwks-rsa": "^1.2.1",
     "mongodb": "^3.0.1",
     "nodemon": "^1.14.10",
     "querystring": "^0.2.0",
+    "reflect-metadata": "^0.1.10",
+    "resolve-url-loader": "^2.1.1",
+    "systemjs": "^0.20.19",
+    "ts-helpers": "^1.1.2",
     "rxjs": "^5.5.2",
     "url": "^0.11.0",
     "zone.js": "^0.8.14"
